# mai-LinuxCore

./: .directory  .gitignore  CMakeLists.txt  README.md  command.sh  list.c  main.c  main.h  pack.c  unpack.c  util.c  util.h
.github/workflows/: cmake.yml
example/: hello.man  test.txt
